--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <main>
-    <div class="box">
+      <div class="box-main">
         <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
         <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
         <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
@@ -33,8 +33,26 @@
         <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
         <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
         <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-    </div>  
-    <div class="box">
+      </div>  
+      <div class="box-main">
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+      </div> 
+      <div class="box-main">
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+        <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+      </div> 
+    <div class="box-main">
       <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
       <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
       <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
@@ -42,34 +60,50 @@
       <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
       <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
       <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  </div> 
-  <div class="box">
-    <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-    <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-    <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-    <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-    <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-    <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-    <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-</div> 
-<div class="box">
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-</div> 
-<div class="box">
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-  <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
-</div> 
+    </div> 
+    <div class="box-main">
+      <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+      <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+      <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+      <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+      <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+      <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+      <div class="user"><span class="username"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span></div>
+    </div> 
   </main>
+  <hr id="main-hr">
+
+  <footer>
+    <div class="footer-left">
+          <div>
+            <a href="#"><svg class="icons" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg></a>
+          <div>Mute</div>
+          </div>
+          <a href="#"><svg class="icons arrow" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"/></svg></a>
+          <a href="#"><svg class="icons" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 128C0 92.7 28.7 64 64 64H320c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128zM559.1 99.8c10.4 5.6 16.9 16.4 16.9 28.2V384c0 11.8-6.5 22.6-16.9 28.2s-23 5-32.9-1.6l-96-64L416 337.1V320 192 174.9l14.2-9.5 96-64c9.8-6.5 22.4-7.2 32.9-1.6z"/></svg></a>
+          <a href="#"><svg class="icons arrow" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"/></svg></a>
+        </div>
+
+
+
+    <div class="footer-center">
+      <div>
+        <a href="#"><svg class="icons" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"/></svg></a>
+      <div>Invite</div>
+      </div>
+      <div>
+        <a href="#"><svg class="icons group" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM609.3 512H471.4c5.4-9.4 8.6-20.3 8.6-32v-8c0-60.7-27.1-115.2-69.8-151.8c2.4-.1 4.7-.2 7.1-.2h61.4C567.8 320 640 392.2 640 481.3c0 17-13.8 30.7-30.7 30.7zM432 256c-31 0-59-12.6-79.3-32.9C372.4 196.5 384 163.6 384 128c0-26.8-6.6-52.1-18.3-74.3C384.3 40.1 407.2 32 432 32c61.9 0 112 50.1 112 112s-50.1 112-112 112z"/></svg></a>
+        <div>Manage Participants</div>
+      </div>
+
+    </div>
+
+    <div class="footer-right">
+
+    </div>
+
+
+  </footer>
+  <hr>
 </body>
 </html>
